--- a/athletic_sales_analysis.ipynb
+++ b/athletic_sales_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "4           5184.00       Online  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,44 +348,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1297 entries, 0 to 1296\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   retailer          1297 non-null   object \n",
+      " 1   retailer_id       1297 non-null   int64  \n",
+      " 2   invoice_date      1297 non-null   object \n",
+      " 3   region            1297 non-null   object \n",
+      " 4   state             1297 non-null   object \n",
+      " 5   city              1297 non-null   object \n",
+      " 6   product           1297 non-null   object \n",
+      " 7   price_per_unit    1297 non-null   int64  \n",
+      " 8   units_sold        1297 non-null   int64  \n",
+      " 9   total_sales       1297 non-null   int64  \n",
+      " 10  operating_profit  1297 non-null   float64\n",
+      " 11  sales_method      1297 non-null   object \n",
+      "dtypes: float64(1), int64(4), object(7)\n",
+      "memory usage: 121.7+ KB\n"
+     ]
     }
    ],
    "source": [
     "# Check the 2020 sales data types.\n",
-    "type(data_2020)"
+    "data_2020.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8346 entries, 0 to 8345\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   retailer          8346 non-null   object \n",
+      " 1   retailer_id       8346 non-null   int64  \n",
+      " 2   invoice_date      8346 non-null   object \n",
+      " 3   region            8346 non-null   object \n",
+      " 4   state             8346 non-null   object \n",
+      " 5   city              8346 non-null   object \n",
+      " 6   product           8346 non-null   object \n",
+      " 7   price_per_unit    8346 non-null   int64  \n",
+      " 8   units_sold        8346 non-null   int64  \n",
+      " 9   total_sales       8346 non-null   int64  \n",
+      " 10  operating_profit  8346 non-null   float64\n",
+      " 11  sales_method      8346 non-null   object \n",
+      "dtypes: float64(1), int64(4), object(7)\n",
+      "memory usage: 782.6+ KB\n"
+     ]
     }
    ],
    "source": [
     "# Check the 2021 sales data types.\n",
-    "type(data_2021)"
+    "data_2021.info()"
    ]
   },
   {
@@ -397,25 +427,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>retailer</th>\n",
+       "      <th>retailer_id</th>\n",
+       "      <th>invoice_date</th>\n",
+       "      <th>region</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city</th>\n",
+       "      <th>product</th>\n",
+       "      <th>price_per_unit</th>\n",
+       "      <th>units_sold</th>\n",
+       "      <th>total_sales</th>\n",
+       "      <th>operating_profit</th>\n",
+       "      <th>sales_method</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Foot Locker</td>\n",
+       "      <td>1185732</td>\n",
+       "      <td>1/1/20</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Men's Street Footwear</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>300000.00</td>\n",
+       "      <td>In-store</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Foot Locker</td>\n",
+       "      <td>1185732</td>\n",
+       "      <td>1/1/20</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>Women's Apparel</td>\n",
+       "      <td>68</td>\n",
+       "      <td>83</td>\n",
+       "      <td>5644</td>\n",
+       "      <td>2426.92</td>\n",
+       "      <td>Online</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Foot Locker</td>\n",
+       "      <td>1185732</td>\n",
+       "      <td>1/1/20</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>Women's Apparel</td>\n",
+       "      <td>75</td>\n",
+       "      <td>275</td>\n",
+       "      <td>206250</td>\n",
+       "      <td>61875.00</td>\n",
+       "      <td>Outlet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Foot Locker</td>\n",
+       "      <td>1185732</td>\n",
+       "      <td>1/1/20</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Men's Street Footwear</td>\n",
+       "      <td>34</td>\n",
+       "      <td>384</td>\n",
+       "      <td>13056</td>\n",
+       "      <td>6789.12</td>\n",
+       "      <td>Outlet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Foot Locker</td>\n",
+       "      <td>1185732</td>\n",
+       "      <td>1/1/20</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>Women's Apparel</td>\n",
+       "      <td>53</td>\n",
+       "      <td>83</td>\n",
+       "      <td>4399</td>\n",
+       "      <td>1407.68</td>\n",
+       "      <td>Outlet</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      retailer  retailer_id invoice_date     region         state  \\\n",
+       "0  Foot Locker      1185732       1/1/20  Northeast      New York   \n",
+       "1  Foot Locker      1185732       1/1/20  Northeast  Pennsylvania   \n",
+       "2  Foot Locker      1185732       1/1/20  Northeast  Pennsylvania   \n",
+       "3  Foot Locker      1185732       1/1/20  Northeast      New York   \n",
+       "4  Foot Locker      1185732       1/1/20  Northeast  Pennsylvania   \n",
+       "\n",
+       "           city                product  price_per_unit  units_sold  \\\n",
+       "0      New York  Men's Street Footwear              50        1200   \n",
+       "1  Philadelphia        Women's Apparel              68          83   \n",
+       "2  Philadelphia        Women's Apparel              75         275   \n",
+       "3      New York  Men's Street Footwear              34         384   \n",
+       "4  Philadelphia        Women's Apparel              53          83   \n",
+       "\n",
+       "   total_sales  operating_profit sales_method  \n",
+       "0       600000         300000.00     In-store  \n",
+       "1         5644           2426.92       Online  \n",
+       "2       206250          61875.00       Outlet  \n",
+       "3        13056           6789.12       Outlet  \n",
+       "4         4399           1407.68       Outlet  "
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Combine the 2020 and 2021 sales DataFrames on the rows and reset the index.\n"
+    "# Combine the 2020 and 2021 sales DataFrames on the rows and reset the index.\n",
+    "combined_data = pd.concat([data_2020, data_2021], axis=\"rows\", join=\"inner\")\n",
+    "combined_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 9643 entries, 0 to 8345\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   retailer          9643 non-null   object \n",
+      " 1   retailer_id       9643 non-null   int64  \n",
+      " 2   invoice_date      9643 non-null   object \n",
+      " 3   region            9643 non-null   object \n",
+      " 4   state             9643 non-null   object \n",
+      " 5   city              9643 non-null   object \n",
+      " 6   product           9643 non-null   object \n",
+      " 7   price_per_unit    9643 non-null   int64  \n",
+      " 8   units_sold        9643 non-null   int64  \n",
+      " 9   total_sales       9643 non-null   int64  \n",
+      " 10  operating_profit  9643 non-null   float64\n",
+      " 11  sales_method      9643 non-null   object \n",
+      "dtypes: float64(1), int64(4), object(7)\n",
+      "memory usage: 979.4+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check if any values are null.\n"
+    "# Check if any values are null.\n",
+    "combined_data.info()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
