--- a/athletic_sales_analysis.ipynb
+++ b/athletic_sales_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "4           5184.00       Online  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if any values are null.\n",
+    "has_null_values = combined_data.isnull().values.any()\n",
+    "print(has_null_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -611,22 +630,13 @@
     }
    ],
    "source": [
-    "# Check if any values are null.\n",
-    "combined_data.info()\n"
+    "# Check the data type of each column\n",
+    "combined_data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check the data type of each column\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
