--- a/athletic_sales_analysis.ipynb
+++ b/athletic_sales_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "4           5184.00       Online  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -636,20 +636,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 202,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/rr/f4rnf7xj5tj1x2gknbjs4mxm0000gn/T/ipykernel_46279/3825834240.py:5: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  cleaned_data['invoice_date']= pd.to_datetime(cleaned_data['invoice_date'], errors='coerce')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>retailer</th>\n",
+       "      <th>retailer_id</th>\n",
+       "      <th>invoice_date</th>\n",
+       "      <th>region</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city</th>\n",
+       "      <th>product</th>\n",
+       "      <th>price_per_unit</th>\n",
+       "      <th>units_sold</th>\n",
+       "      <th>total_sales</th>\n",
+       "      <th>operating_profit</th>\n",
+       "      <th>sales_method</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Foot Locker</td>\n",
+       "      <td>1185732</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Men's Street Footwear</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>600000</td>\n",
+       "      <td>300000.00</td>\n",
+       "      <td>In-store</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Foot Locker</td>\n",
+       "      <td>1185732</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>Women's Apparel</td>\n",
+       "      <td>68</td>\n",
+       "      <td>83</td>\n",
+       "      <td>5644</td>\n",
+       "      <td>2426.92</td>\n",
+       "      <td>Online</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Foot Locker</td>\n",
+       "      <td>1185732</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>Women's Apparel</td>\n",
+       "      <td>75</td>\n",
+       "      <td>275</td>\n",
+       "      <td>206250</td>\n",
+       "      <td>61875.00</td>\n",
+       "      <td>Outlet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Foot Locker</td>\n",
+       "      <td>1185732</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Men's Street Footwear</td>\n",
+       "      <td>34</td>\n",
+       "      <td>384</td>\n",
+       "      <td>13056</td>\n",
+       "      <td>6789.12</td>\n",
+       "      <td>Outlet</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Foot Locker</td>\n",
+       "      <td>1185732</td>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>Northeast</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>Women's Apparel</td>\n",
+       "      <td>53</td>\n",
+       "      <td>83</td>\n",
+       "      <td>4399</td>\n",
+       "      <td>1407.68</td>\n",
+       "      <td>Outlet</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      retailer  retailer_id invoice_date     region         state  \\\n",
+       "0  Foot Locker      1185732   2020-01-01  Northeast      New York   \n",
+       "1  Foot Locker      1185732   2020-01-01  Northeast  Pennsylvania   \n",
+       "2  Foot Locker      1185732   2020-01-01  Northeast  Pennsylvania   \n",
+       "3  Foot Locker      1185732   2020-01-01  Northeast      New York   \n",
+       "4  Foot Locker      1185732   2020-01-01  Northeast  Pennsylvania   \n",
+       "\n",
+       "           city                product  price_per_unit  units_sold  \\\n",
+       "0      New York  Men's Street Footwear              50        1200   \n",
+       "1  Philadelphia        Women's Apparel              68          83   \n",
+       "2  Philadelphia        Women's Apparel              75         275   \n",
+       "3      New York  Men's Street Footwear              34         384   \n",
+       "4  Philadelphia        Women's Apparel              53          83   \n",
+       "\n",
+       "   total_sales  operating_profit sales_method  \n",
+       "0       600000         300000.00     In-store  \n",
+       "1         5644           2426.92       Online  \n",
+       "2       206250          61875.00       Outlet  \n",
+       "3        13056           6789.12       Outlet  \n",
+       "4         4399           1407.68       Outlet  "
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Convert the \"invoice_date\" to a datetime datatype\n"
+    "# Copy the DataFrame\n",
+    "cleaned_data = combined_data.copy()\n",
+    "\n",
+    "# Convert the \"invoice_date\" to a datetime datatype\n",
+    "cleaned_data['invoice_date']= pd.to_datetime(cleaned_data['invoice_date'], errors='coerce')\n",
+    "\n",
+    "# Drop the rows that didn't successfully concert to datetime\n",
+    "cleaned_data = cleaned_data.dropna(subset=['invoice_date']).reset_index(drop=True)\n",
+    "cleaned_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 217,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9643 entries, 0 to 9642\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column            Non-Null Count  Dtype         \n",
+      "---  ------            --------------  -----         \n",
+      " 0   retailer          9643 non-null   object        \n",
+      " 1   retailer_id       9643 non-null   int64         \n",
+      " 2   invoice_date      9643 non-null   datetime64[ns]\n",
+      " 3   region            9643 non-null   object        \n",
+      " 4   state             9643 non-null   object        \n",
+      " 5   city              9643 non-null   object        \n",
+      " 6   product           9643 non-null   object        \n",
+      " 7   price_per_unit    9643 non-null   int64         \n",
+      " 8   units_sold        9643 non-null   int64         \n",
+      " 9   total_sales       9643 non-null   int64         \n",
+      " 10  operating_profit  9643 non-null   float64       \n",
+      " 11  sales_method      9643 non-null   object        \n",
+      "dtypes: datetime64[ns](1), float64(1), int64(4), object(6)\n",
+      "memory usage: 904.2+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "# Confirm that the \"invoice_date\" data type has been changed.\n"
+    "# Confirm that the \"invoice_date\" data type has been changed.\n",
+    "cleaned_data.info()"
    ]
   },
   {
@@ -668,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
