Added products grouping
Signed-off-by: Jenn Allen <jenn.allen@gmail.com>

--- a/athletic_sales_analysis.ipynb
+++ b/athletic_sales_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 195,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "4           5184.00       Online  "
       ]
      },
-     "execution_count": 196,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 199,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
        "4         4399           1407.68       Outlet  "
       ]
      },
-     "execution_count": 202,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -854,15 +854,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 266,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Total_Products_Sold</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>region</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Midwest</th>\n",
+       "      <th>Illinois</th>\n",
+       "      <th>Chicago</th>\n",
+       "      <td>25407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Indiana</th>\n",
+       "      <th>Indianapolis</th>\n",
+       "      <td>26332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iowa</th>\n",
+       "      <th>Des Moines</th>\n",
+       "      <td>23446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kansas</th>\n",
+       "      <th>Wichita</th>\n",
+       "      <td>29463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Michigan</th>\n",
+       "      <th>Detroit</th>\n",
+       "      <td>50095</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Total_Products_Sold\n",
+       "region  state    city                             \n",
+       "Midwest Illinois Chicago                     25407\n",
+       "        Indiana  Indianapolis                26332\n",
+       "        Iowa     Des Moines                  23446\n",
+       "        Kansas   Wichita                     29463\n",
+       "        Michigan Detroit                     50095"
+      ]
+     },
+     "execution_count": 266,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Show the number products sold for region, state, and city.\n",
-    "# Rename the sum to \"Total_Products_Sold\".\n",
+    "region_group = cleaned_data.drop('invoice_date', axis=1).groupby(['region', 'state', 'city']).agg({'units_sold': 'sum'})\n",
     "\n",
+    "# Rename the sum to \"Total_Products_Sold\".            \n",
+    "region_group.rename(columns={'units_sold': 'Total_Products_Sold'}, inplace=True)\n",
     "\n",
-    "# Show the top 5 results.\n"
+    "# Show the top 5 results.\n",
+    "region_group.head(5)\n"
    ]
   },
   {
@@ -874,17 +955,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 270,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/rr/f4rnf7xj5tj1x2gknbjs4mxm0000gn/T/ipykernel_46279/2949859847.py:3: FutureWarning: The provided callable <built-in function sum> is currently using DataFrameGroupBy.sum. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"sum\" instead.\n",
+      "  region_pivot = pd.pivot_table(cleaned_data,\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Total_Products_Sold</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>region</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Midwest</th>\n",
+       "      <th>Illinois</th>\n",
+       "      <th>Chicago</th>\n",
+       "      <td>25407</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Indiana</th>\n",
+       "      <th>Indianapolis</th>\n",
+       "      <td>26332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iowa</th>\n",
+       "      <th>Des Moines</th>\n",
+       "      <td>23446</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kansas</th>\n",
+       "      <th>Wichita</th>\n",
+       "      <td>29463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Michigan</th>\n",
+       "      <th>Detroit</th>\n",
+       "      <td>50095</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Total_Products_Sold\n",
+       "region  state    city                             \n",
+       "Midwest Illinois Chicago                     25407\n",
+       "        Indiana  Indianapolis                26332\n",
+       "        Iowa     Des Moines                  23446\n",
+       "        Kansas   Wichita                     29463\n",
+       "        Michigan Detroit                     50095"
+      ]
+     },
+     "execution_count": 270,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Show the number products sold for region, state, and city.\n",
     "\n",
+    "region_pivot = pd.pivot_table(cleaned_data,\n",
+    "                              index=['region', 'state', 'city'],\n",
+    "                              values='units_sold',\n",
+    "                              aggfunc=(sum)\n",
+    "                              )\n",
     "\n",
     "# Rename the \"units_sold\" column to \"Total_Products_Sold\"\n",
+    "region_pivot.rename(columns={'units_sold': 'Total_Products_Sold'}, inplace=True)\n",
     "\n",
-    "\n",
-    "# Show the top 5 results.\n"
+    "# Show the top 5 results.\n",
+    "region_pivot.head()\n"
    ]
   },
   {
@@ -903,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1067,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
